# appleamx-mlir

./: CMakeLists.txt  README.md
appleamx-opt/: CMakeLists.txt  appleamx-opt.cpp
appleamx-plugin/: CMakeLists.txt  appleamx-plugin.cpp
appleamx-translate/: CMakeLists.txt  appleamx-translate.cpp
include/AppleAMX/: CMakeLists.txt  Dialect.h  Dialect.td  Ops.h  Ops.td  Passes.h  Passes.td  Types.h  Types.td
lib/: CMakeLists.txt
lib/AppleAMX/: CMakeLists.txt  Dialect.cpp  Ops.cpp  Passes.cpp  Types.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/AppleAMX/: appleamx-opt.mlir  appleamx-pass-plugin.mlir  appleamx-plugin.mlir  appleamx-raise-affine-matmul.mlir  appleamx-tile-matmul.mlir  appleamx-translate.mlir  dummy.mlir
